# doclayout

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.en.md  README.md  README.zh-CN.md  config.py  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml
dashboard/: app.py
scripts/: audit_consistency.py  detect.py  download_data.py  evaluate.py  make_samples.py  visualize.py
src/doclayout/: __init__.py  audit_consistency.py  config.py  detect.py  download_data.py  evaluate.py  logging_setup.py  make_samples.py  visualize.py
tests/: test_audit.py  test_config.py  test_detect.py  test_evaluate.py  test_logging_detect.py  test_visualize_samples.py
